--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "nestjs-cls": "^6.0.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
