--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.5.0",
     "nestjs-cls": "^6.0.1",
     "pg": "^8.16.0",
+    "redis": "^5.5.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24"
